[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Blimp.tscn" type="PackedScene" id=2]
[ext_resource path="res://AllOb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/BKG-Hills-24.png" type="Texture" id=4]
[ext_resource path="res://Fonts/braveheart_dafont.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Countdown.gd" type="Script" id=6]
[ext_resource path="res://Assets/Grass-29.png" type="Texture" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Pump.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 500
font_data = ExtResource( 5 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 127.787, 9.72699 )
b = Vector2( -82.213, 9.72699 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1279.32, -0.118183, 0, 0, 0, 0, 1280, 720 )
}

[sub_resource type="Animation" id=4]
resource_name = "GrassM"
tracks/0/type = "value"
tracks/0/path = NodePath("Grass:region_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1097.16, 10 )

[node name="Main" type="Node"]
script = ExtResource( 1 )
Blimp = ExtResource( 2 )
Ob_types = ExtResource( 3 )

[node name="BKG" type="ColorRect" parent="."]
margin_left = -139.0
margin_top = -130.0
margin_right = 1487.0
margin_bottom = 867.0
color = Color( 0.956863, 0.866667, 0.760784, 1 )

[node name="Hills" type="Sprite" parent="."]
position = Vector2( 640, 450 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 700 )

[node name="Start" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Countdown" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 526.515
margin_top = 141.845
margin_right = 858.515
margin_bottom = 725.845
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
text = "x"
scroll_active = false
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Countdown"]
autostart = true

[node name="BlimpSP" type="Position2D" parent="."]
position = Vector2( 436.238, 206.759 )

[node name="Ground" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 410, 640 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 228.0
margin_right = 983.0
margin_bottom = 624.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1279.32, -0.118183 )
rotation = 1.5698

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 670, 660 )
scale = Vector2( 0.5, 0.5 )
z_index = 5
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 2800, 300 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 1166.02, 362.636 )
scale = Vector2( 0.5, 0.5 )
z_index = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GrassM = SubResource( 4 )

[node name="Pump" parent="." instance=ExtResource( 9 )]

[node name="Roof" type="StaticBody2D" parent="."]
position = Vector2( 0, -106.307 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roof"]
position = Vector2( 441.048, -15.5672 )
shape = SubResource( 5 )
disabled = true
[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
[connection signal="timeout" from="Countdown/Timer" to="Countdown" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
